<resources>
    <string name="app_name">Atizapán de Zaragoza</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    //Login Screen
    <string name="continue_google">Continuar con Google</string>
    <string name="hint_username">Correo</string>
    <string name="hint_fullName">Nombre completo</string>
    <string name="hint_direccion">Calle Num Colonia Cp</string>

    <string name="hint_password">Contraseña</string>
    <string name="button_sign_in">Ingresar</string>
    <string name="button_sign_up">Registrarse</string>
    <string name="button_sign_up2">Confirmar Registro</string>
    <string name="button_sign_up3">Iniciar Sesión</string>


    <string name="button_send">Enviar</string>
    <string name="text_sin_registro">¿Ingresar sin registrarse?</string>
    <string name="text_signin_message">Hola!!, ingresa a tu cuenta</string>

    <string name="text_signin_signup">Aún no tines una cuenta? <b>Registrarse</b></string>
    <string name="text_signup_terms">Al registrarte, aceptas nuestros <b>terminos y condiciones</b></string>
    <string name="text_signup_message">Hola, vamos a configurar tu cuenta</string>
    <string name="text_signup_message2">Ingresa tus datos verídicos</string>
    <string name="text_signup">Aún no tines una cuenta? </string>

    <string name="text_forgot_password_title">Olvidaste tu contraseña?, no te preocupes</string>
    <string name="text_forgot_password_message">Te enviaremos un link para resetear tu contraseña</string>

    <string name="hint_email">Correo</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_confirm_password">Confirma tu contraseña</string>
    <string name="todo">TODO</string>
    <string name="todok">TODO</string>
    <string name="todooo">TODO</string>

    <string name="sample_string"><![CDATA[some test line 1 <br />some test line 2]]></string>


    Fuente: https://www.iteramos.com/pregunta/25639/como-anadir-un-salto-de-linea-en-un-android-textview
    <string name="dialog_one_style_title">Registro</string>
    <string name="one_style_title_dialog_tv">Registro</string>
    <string name="title_activity_mapa_servicios">mapaServicios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>